# nmoma

./: .gitignore  README.md  auto.sh  diffusion_node.py  index.html  loss.py  test_ddpm.py
config/: ddpm.yaml  edm.yaml
modules/: consistency_model.py  ddpm.py  dschedule.py  edm.py  guidance.py  mink_resnet copy.py  mink_resnet.py  pt_mamba copy.py  pt_mamba.py  ptrans3 copy.py  ptrans3.py  unet.py  unet_old.py  unet_proposed.py
pointnet2_ops_lib/: setup.py
pointnet2_ops_lib/pointnet2_ops/: __init__.py  pointnet2_utils.py
src/map/: CMakeLists.txt  package.xml
src/map/include/map/: grid_map.h
src/map/src/: grid_map.cpp
src/planner/: CMakeLists.txt  package.xml
src/planner/cmake_modules/: FindCASADI.cmake
src/planner/include/planner/: birrts.h  graph_search.h  mcrrts.h  moma_traj_opt.h  mpc.h  ompc.h  ompls.h  pinocchio_ik.h  planner.h  topo_prm.h
src/planner/include/utils/: data.hpp  lbfgs.hpp  minco.hpp  moma_py2cpp.hpp  shared_data.hpp
src/planner/launch/: auto.launch  run_all.launch  run_one_stat.xml  verify.launch  visualize.launch
src/planner/msg/: MeshPCD.msg  MeshPart.msg  MeshState.msg  MeshTraj.msg  PolyTraj.msg
src/planner/param_auto/: all_1.yaml
src/planner/params/: agent.yaml  birrts.yaml  grid_map.yaml  ik.yaml  mcrrts.yaml  mpc.yaml  optimizer.yaml  optimizer_falm.yaml  rog_map.yaml  topo_prm.yaml  verify.yaml  visualize.yaml
src/planner/src/: birrts.cpp  graph_search.cpp  mcrrts.cpp  moma_traj_opt.cpp  moma_traj_opt_falm.cpp  moma_traj_opt_relax.cpp  ompc.cpp  ompls.cpp  pinocchio_ik.cpp  planner.cpp  planner_node.cpp  topo_prm.cpp
src/planner/src/utils/: data.cpp  moma_utils.cpp  raycast.cpp  shared_data.cpp  verifier.cpp  visualizer.cpp
src/planner/srv/: Plan.srv  Task.srv
src/rog_map/: CMakeLists.txt
src/rog_map/include/rog_map/: esdf_map.h  prob_map.h  rog_map.h
src/rog_map/include/rog_map/rog_map_core/: sliding_map.h
src/rog_map/src/rog_map/: esdf_map.cpp  prob_map.cpp  rog_map.cpp
src/simulator/fake_moma/: CMakeLists.txt  package.xml
src/simulator/fake_moma/include/fake_moma/: moma_param.h
src/simulator/fake_moma/launch/: default.rviz  test.launch
src/simulator/fake_moma/meshes/: gripper.dae
src/simulator/fake_moma/msg/: MomaCmd.msg  MomaState.msg
src/simulator/fake_moma/scripts/: keyboard_ctrl.py  moma_param.py  mpc_demo.py
src/simulator/fake_moma/src/: moma_param.cpp  moma_sim.cpp  moma_vis.cpp
src/simulator/interactive_marker/: package.xml
src/simulator/interactive_marker/src/: interactive_marker.cpp  interactive_marker_node.cpp
src/simulator/local_sensing/: CMakeLists.txt
src/simulator/local_sensing/include/: opengl_sim.hpp
src/simulator/local_sensing/src/: opengl_render_node.cpp  pointcloud_render_node.cpp
src/simulator/random_map_generator/: CMakeLists.txt  package.xml
src/simulator/random_map_generator/env/: map.pcd
src/simulator/random_map_generator/include/random_map_generator/: random_map.hpp
src/simulator/random_map_generator/launch/: test.launch
src/simulator/random_map_generator/params/: map.yaml
src/simulator/random_map_generator/rviz/: default.rviz
src/simulator/random_map_generator/src/: random_map_generator.cpp  random_map_node.cpp
static/css/: index.css
utils/: add_h5.py  data_loader.py  flash.md  gen_primitive.py  gen_primitive_all.py  gen_primitive_se2.py  mIoU.py  make_idx.py  make_trajlib_loss.py  sample_key_config.py  sanitize.py  shm_to_h5.py  toh5.py  toh5_parallel.py  utils.py
