<?xml version="1.0"?>
<package format="2">
  <name>planner</name>
  <version>0.0.1</version>
  <description>a planner package</description>

  <maintainer email="xulon666@gmail.com">xulong</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>roslib</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>visualization_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>roslib</exec_depend>

  <build_depend>message_generation</build_depend>
  <build_export_depend>message_generation</build_export_depend>
  <exec_depend>message_runtime</exec_depend>

  <build_depend>pybind11_catkin</build_depend>
  <exec_depend>pybind11_catkin</exec_depend>

  <build_depend>fake_moma</build_depend>
  <exec_depend>fake_moma</exec_depend>

  <build_depend>rog_map</build_depend>
  <exec_depend>rog_map</exec_depend>

  <build_depend>random_map_generator</build_depend>
  <exec_depend>random_map_generator</exec_depend>

  <build_depend>boost</build_depend>
  <exec_depend>boost</exec_depend>

  <build_depend>map</build_depend>
  <exec_depend>map</exec_depend>

  <!-- <depend>pinocchio</depend> -->

</package>
